<resources>
    <string name="app_name">BootcampHW1</string>
    <string name="modern_aest">Modern<br/>Aesthetic<br/>Fashion</string>
    <string name="text_shop">Shop women</string>
    <string name="text_shop_men">Shop men</string>
    <string name="text_login">Already have account? <b>Log In</b></string>
    <string name="back_button">Back button</string>

    <string name="let_s_start">Lets  start here</string>
    <string name="fill_in_you">Fill in your details to begin</string>
    <string name="fullname">Fullname</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="by_signing_">By signing in, I agree with <b>Terms of Use</b><br/> and  <b>Privacy Policy</b></string>
</resources>