<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/back_button"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/let_s_start"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:text="@string/let_s_start"
        android:textAppearance="@style/let_s_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="textStart"
        android:layout_marginStart="16dp"
        android:layout_marginTop="95dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fill_in_you"
        android:layout_width="249dp"
        android:layout_height="26dp"
        app:layout_constraintTop_toBottomOf="@+id/let_s_start"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="textStart"
        android:layout_marginStart="16dp"
        android:text="@string/fill_in_you"
        android:textAppearance="@style/fill_in_you"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_fullname"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/fill_in_you"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:hint="@string/fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_toggle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/txt_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_toggle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/round_corner_toggle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="58dp"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/rectangle_signup"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="@color/color_signup"
        />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"
        android:text="@string/or"
        android:layout_marginTop="10dp"
        android:textColor="#2b2b2b"
        android:textSize="17sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="-20dp"
        android:paddingStart="20dp"
        android:layout_height="58dp"
        android:layout_width="343dp"
        app:layout_constraintTop_toBottomOf="@id/txt_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/connect_with_facebook"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="@color/color_signup"
        android:background="@drawable/rectangle_facebook"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="343dp"
        android:layout_height="58dp"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_google"
        android:drawablePadding="-20dp"
        android:paddingStart="20dp"
        android:text="@string/connect_with_google"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="@color/color_google"
        android:drawableStart="@drawable/ic_google"
        />

    <TextView
        android:id="@+id/by_signing_"
        android:layout_width="329dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/by_signing_"
        android:textAppearance="@style/by_signing_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:textColor="@color/color_google"
        />

</androidx.constraintlayout.widget.ConstraintLayout>