<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/splash_background">

    <TextView
        android:id="@+id/modern_aest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="323dp"
        android:text="@string/modern_aest"
        android:textAppearance="@style/modern_aest"
        android:lineSpacingExtra="0sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_women_shop"
        android:layout_width="300dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/modern_aest"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_splash"
        android:text="@string/text_shop"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_men_shop"
        android:layout_width="300dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/btn_women_shop"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rectangle_splash"
        android:text="@string/text_shop_men"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginStart="36dp" />

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/btn_men_shop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>